--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="container">
         
 <ul id="nav">
-	<li><a href="file:///C:/Users/Compu-Shrink/Downloads/contacttt.html">Contact</a></li>
+	<li><a href="contacttt.html">Contact</a></li>
 </ul>
 
 <div id="header">
