Refractor folder structure

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 	<p>Through this course I'm constantly creating new projects so more will be added as we progress</p>
 	
 	<div class="portfolio-item">
-		<a href="#"><img src="Portfoliko pic.png" alt="View more info" /></a>
+		<a href="#"><img src="assets/images/Portfoliko pic.png" alt="View more info" /></a>
 		
 	</div>
 	
 	<div class="portfolio-item">
-		<a href="#"><img src="second jpeg.jpg" alt="View more info" /></a>
+		<a href="#"><img src="assets/images/second jpeg.jpg" alt="View more info" /></a>
 		<p class="btn"><a href="https://austinc12.github.io/Code-refractor-/">See more</a></p>
 	</div>
 	
